# open_gl_trials

./: '  .clangd  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  asan.supp  b  sdl2.supp
assets/shaders/: FragMVP.frag  FragUI.frag  FragmentFirst.frag  PostProcess.vert  ScreenPostProcess.frag  VertMVP.vert  VertUI.vert  VertexFirst.vert  WorldPostProcess.frag
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Defines.h  ansi_control.hpp
include/math/: math_common.hpp
include/wtypes/: Vec2.hpp  Vec3.hpp
src/: AxisGuide.hpp  Engine.cpp  Engine.hpp  MeshManager.cpp  MeshManager.hpp  MeshNode.hpp  Node.cpp  Node.hpp  OldOpenGLHelp.hpp  PlayerElem.hpp  PlayerElem_alt.hpp  RS_PipelineTools.cpp  RS_PipelineTools.hpp  RenderItem.cpp  RenderItem.hpp  RenderNode.hpp  RenderServer.cpp  RenderServer.hpp  SceneElems.hpp  SpriteElement.cpp  SpriteElement.hpp  TextureManager.cpp  TextureManager.hpp  UI3DMeshNode.hpp  UiNode.hpp  main.cpp
